Makhsudov/mock implementation draft (#12)
* fix README

* add server generated stubs

* mock implementation draft

* full get api mock implementation
